# rank-cpp

./: .gitmodules  CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake  Doxygen.cmake  FindSphinx.cmake
doc/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst
include/rankcpp/: BitSpan.hpp  BoostBigUint.hpp  Dimensions.hpp  Key.hpp  Rank.hpp  ScoresTable.hpp  WeightTable.hpp
include/rankcpp/utils/: Encoding.hpp  Numeric.hpp
test/: BitSpanTests.cpp  CMakeLists.txt  DimensionsTests.cpp  KeyTests.cpp  RankTests.cpp  ScoresTableTests.cpp  WeightTableTests.cpp
test/utils/: EncodingTests.cpp  NumericTests.cpp
